fixed issue seen with some larger negative values wrapping

--- a/src/components/fund-banner/fund-banner.scss
+++ b/src/components/fund-banner/fund-banner.scss
@@ -23,6 +23,7 @@ fund-banner {
     font-size: 18px;
     display: inline;
     font-weight: bold;
+    white-space: nowrap;
   }
 
   .volume {
